--- a/prototype/test.html
+++ b/prototype/test.html
@@ -1,11 +1,45 @@
 <!doctype html>
 <html ng-app>
   <head>
+
+    <link href="novus-nvd3-e91cf0a/src/d3.css" rel="stylesheet" type="text/css">
+
     <script src="angular-1.0.1/angular-1.0.1.min.js"></script>
+
     <script src="novus-nvd3-e91cf0a/lib/d3.v2.js"></script>
     <script src="novus-nvd3-e91cf0a/nv.d3.js"></script>
+
+    <script src="novus-nvd3-e91cf0a/src/tooltip.js"></script>
+    <script src="novus-nvd3-e91cf0a/src/utils.js"></script>
+    <script src="novus-nvd3-e91cf0a/src/models/legend.js"></script>
+    <script src="novus-nvd3-e91cf0a/src/models/axis.js"></script>
+    <script src="novus-nvd3-e91cf0a/src/models/scatter.js"></script>
+    <script src="novus-nvd3-e91cf0a/src/models/line.js"></script>
+    <script src="novus-nvd3-e91cf0a/src/models/lineChart.js"></script>
+
+
     <script src="test.js"></script>
     <style type="text/css">
+      body {
+      overflow-y:scroll;
+      }
+
+      text {
+      font: 12px sans-serif;
+      }
+
+      svg {
+      display: block;
+      }
+
+      #chart1 svg {
+      height:600px;
+      width:800px;
+      min-width: 100px;
+      min-height: 100px;
+      }
+
+
       ul.resultList {
       list-style-type:none;width:200px
       }
@@ -108,6 +142,8 @@
             {{chart.chartName}}
           </li>
         </ul>
+        <div id="chart-container">
+        </div>
       </div>
     </div>
   </body>
