--- a/prototype/test.html
+++ b/prototype/test.html
@@ -4,6 +4,7 @@
 
     <link href="novus-nvd3-e91cf0a/src/d3.css" rel="stylesheet" type="text/css">
 
+    <script src="angular-1.0.1/docs-1.0.1/js/jquery.js"></script>
     <script src="angular-1.0.1/angular-1.0.1.min.js"></script>
 
     <script src="novus-nvd3-e91cf0a/lib/d3.v2.js"></script>
