--- a/prototype/test.html
+++ b/prototype/test.html
@@ -56,7 +56,9 @@
       }
 
       li.selectedResult {
-      background-color:#FF9999;
+      background-color: #8FACB3;
+      border-width: 1px;
+      border-style: solid;
       }
 
       .queryId {
@@ -97,14 +99,14 @@
       float:left;
       width:100px;
       display:block;
-      background-color:#99CFCC;
+      background-color: #CCCCCC;
       text-align:center;
-      border-width:0px 1px 0px 0px;
-      border-style:solid
       }
 
       li.selectedChart {
-      background-color:#FF9999;
+      background-color: #B3968F;
+      border-width:1px;
+      border-style:solid;
       }
 
     </style>
