Adding DataTables; some cleanup.

--- a/prototype/test.html
+++ b/prototype/test.html
@@ -4,23 +4,44 @@
 
     <link href="novus-nvd3-e91cf0a/src/d3.css" rel="stylesheet" type="text/css">
 
-    <script src="angular-1.0.1/docs-1.0.1/js/jquery.js"></script>
-    <script src="angular-1.0.1/angular-1.0.1.min.js"></script>
+    <script type="text/javascript" language="javascript"
+            src="angular-1.0.1/docs-1.0.1/js/jquery.js"></script>
+    <script type="text/javascript" language="javascript"
+            src="angular-1.0.1/angular-1.0.1.min.js"></script>
 
-    <script src="novus-nvd3-e91cf0a/lib/d3.v2.js"></script>
-    <script src="novus-nvd3-e91cf0a/nv.d3.js"></script>
+    <script type="text/javascript" language="javascript"
+            src="DataTables-1.9.3/media/js/jquery.dataTables.js"></script>
+    <style type="text/css" title="currentStyle">
+      @import "DataTables-1.9.3/media/css/demo_page.css";
+      @import "DataTables-1.9.3/media/css/demo_table.css";
+    </style>
 
-    <script src="novus-nvd3-e91cf0a/src/tooltip.js"></script>
-    <script src="novus-nvd3-e91cf0a/src/utils.js"></script>
-    <script src="novus-nvd3-e91cf0a/src/models/legend.js"></script>
-    <script src="novus-nvd3-e91cf0a/src/models/axis.js"></script>
-    <script src="novus-nvd3-e91cf0a/src/models/scatter.js"></script>
-    <script src="novus-nvd3-e91cf0a/src/models/line.js"></script>
-    <script src="novus-nvd3-e91cf0a/src/models/lineChart.js"></script>
+    <script type="text/javascript" language="javascript"
+            src="novus-nvd3-e91cf0a/lib/d3.v2.js"></script>
+    <script type="text/javascript" language="javascript"
+            src="novus-nvd3-e91cf0a/nv.d3.js"></script>
+    <script type="text/javascript" language="javascript"
+            src="novus-nvd3-e91cf0a/src/tooltip.js"></script>
+    <script type="text/javascript" language="javascript"
+            src="novus-nvd3-e91cf0a/src/utils.js"></script>
+    <script type="text/javascript" language="javascript"
+            src="novus-nvd3-e91cf0a/src/models/legend.js"></script>
+    <script type="text/javascript" language="javascript"
+            src="novus-nvd3-e91cf0a/src/models/axis.js"></script>
+    <script type="text/javascript" language="javascript"
+            src="novus-nvd3-e91cf0a/src/models/scatter.js"></script>
+    <script type="text/javascript" language="javascript"
+            src="novus-nvd3-e91cf0a/src/models/line.js"></script>
+    <script type="text/javascript" language="javascript"
+            src="novus-nvd3-e91cf0a/src/models/lineChart.js"></script>
 
 
     <script src="test.js"></script>
     <style type="text/css">
+      td.right-align {
+      text-align:right;
+      }
+
       body {
       overflow-y:scroll;
       }
@@ -33,7 +54,7 @@
       display: block;
       }
 
-      #chart1 svg {
+      #chart-container {
       height:600px;
       width:800px;
       min-width: 100px;
