Skip the directive; go with a hacky controller-driven mechanism for now

--- a/public/index.html
+++ b/public/index.html
@@ -40,9 +40,6 @@
         </ul>
       </div>
       <div class="chartBox" ng-controller="ChartCtrl">
-	<grid result-set="selectedResult"></grid>
-      </div>
-<!--      <div class="chartBox"style="" ng-controller="ChartCtrl">
         <ul class="chartList">
           <li class="chartOption"
               ng-repeat="chart in availableCharts()"
@@ -51,9 +48,8 @@
             {{chart.chartName}}
           </li>
         </ul>
-        <div id="chart-container">
-        </div>
-      </div>-->
+        <div id="chart-container"></div>
+      </div>
     </div>
   </body>
 </html>
