Hack in line chart, add notes on next steps

--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,19 @@
 <html ng-app="app">
   <head>
     <title>Cartographer</title>
-    <link href="assets/css/base.css" rel="stylesheet" type="text/css"></link>
     <style type="text/css" title="currentStyle">
       @import "vendor/datatables/css/demo_table.css";
     </style>
+    <link href="vendor/rickshaw/rickshaw.min.css" rel="stylesheet" type="text/css"></link>
+
+    <link href="assets/css/base.css" rel="stylesheet" type="text/css"></link>
 
     <script type="text/javascript" src="vendor/jquery/jquery-2.0.3.min.js"></script>
     <script type="text/javascript" src="vendor/angular/angular.js"></script>
+    <script type="text/javascript" src="vendor/d3/d3.v3.min.js"></script>
     <script type="text/javascript" src="vendor/datatables/js/jquery.dataTables.min.js"></script>
+    <script type="text/javascript" src="vendor/rickshaw/rickshaw.min.js"></script>
+
     <script type="text/javascript" src="assets/javascripts/app.js"></script>
     <script type="text/javascript" src="assets/javascripts/services.js"></script>
     <script type="text/javascript" src="assets/javascripts/controllers.js"></script>
